# ResearchPulse

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Course Project.txt  LICENSE  README.md  _verify_fixes.py  alembic.ini  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  summary.md  supabase_schema.sql  vercel.json
artifacts/: .gitkeep  reading_list.md  simulated_run_2026-01-08.json
data/: arxiv_categories.json  colleagues.json  delivery_policy.json  papers_state.json  prompt_examples.json  research_profile.json
migrations/: env.py
migrations/versions/: 20260130_0000_001_initial_schema.py  add_arxiv_categories.py  add_autonomous_components.py  add_bulk_action_fields.py  add_colleague_fields.py  add_colleague_onboarding.py  add_execution_settings.py  add_feature_flag_settings.py  add_paper_summary.py  add_paper_view_fields.py  add_preferred_time_period.py  add_profile_fields.py  add_prompt_requests.py  add_prompt_templates.py  add_reminder_token.py  add_saved_prompts.py  calendar_invite_emails.py  colleague_email_log.py  inbox_settings.py  merge_colleague_and_time_period.py  paper_feedback_history.py
src/: __init__.py
src/agent/: __init__.py  profile_evolution.py  prompt_controller.py  react_agent.py  reply_parser.py  scope_gate.py  stop_controller.py
src/api/: __init__.py  colleague_routes.py  dashboard_routes.py  routes.py  run_manager.py  schema_guard.py
src/config/: __init__.py  feature_flags.py
src/db/: __init__.py  data_service.py  database.py  json_store.py  models.py  orm_models.py  postgres_store.py  store.py  supabase_client.py
src/rag/: __init__.py  embeddings.py  pinecone_client.py  retriever.py  vector_store.py
src/tools/: __init__.py  architecture_diagram.py  arxiv_categories.py  audit_log.py  calendar_invite_sender.py  check_seen.py  colleague_parser.py  colleague_tokens.py  decide_delivery.py  email_poller.py  email_templates.py  fetch_arxiv.py  generate_report.py  ics_generator.py  inbound_processor.py  inbox_scheduler.py  join_code_crypto.py  live_document.py  llm_novelty.py  llm_relevance.py  outbound_email.py  persist_state.py  recipient_resolution.py  rescore_papers.py  retrieve_similar.py  scheduler_service.py  score_relevance.py  summarize_paper.py  terminate_run.py
static/: index.html
static/public/: .gitkeep  decision_graph.mmd
tests/: test_integration.py
unit_testing/: TESTING.md  __init__.py  api_inspector.ipynb  conftest.py  unit_testing_results.txt
unit_testing/integration/: __init__.py  test_agent_integration.py  test_colleague_workflows.py  test_end_to_end.py  test_inbox_reading.py  test_rescheduling.py
unit_testing/unit/: __init__.py  test_autonomous_components.py  test_calendar_reminders.py  test_colleague_parser.py  test_colleague_tokens.py  test_course_compliance.py  test_diag_upstream.py  test_email_sending.py  test_email_templates.py  test_execution_settings.py  test_ics_generator.py  test_inbox_settings.py  test_llm_relevance.py  test_paper_discovery.py  test_pipeline_consistency.py  test_prompt_templates.py  test_query_pipeline_fix.py  test_recipient_resolution.py  test_reply_parser.py  test_reschedule_fix.py  test_scope_gate.py  (+4 more)
